<resources>
    <string name="app_name">Калькулятор</string>
    <string name="enter_field">0</string>
    <string name="button_clear">C</string>
    <string name="button_1">1</string>
    <string name="backspace"><![CDATA[<--]]></string>
    <string name="square_root">√</string>
    <string name="divide">/</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_multiple">*</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_minus">-</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_plus">+</string>
    <string name="button_ext_func">SET</string>
    <string name="button_0">0</string>
    <string name="button_point">,</string>
    <string name="button_equal">=</string>
    <string name="enter_field_text">0</string>
    <string name="my_style">MyStyle</string>
    <string name="my_style1">MyStyle1</string>
    <string name="mode_day_night">Mode</string>
    <string name="mode_value">Day</string>
    <string name="button_update">Update</string>
</resources>