<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/enter_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/enter_field_background"
        android:gravity="bottom|end"
        android:lines="2"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/enter_field_text"
        android:textSize="@dimen/enter_field_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_extended_func"
        app:layout_constraintEnd_toEndOf="@id/button_divide"
        app:layout_constraintStart_toStartOf="@id/button_extended_func"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_extended_func"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/calc_background"
        android:textColor="@color/black"
        android:text="@string/button_ext_func"
        android:textSize="@dimen/buttons_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        app:layout_constraintEnd_toStartOf="@id/button_clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/calc_background"
        android:textColor="@color/black"
        android:text="@string/button_clear"
        android:textSize="@dimen/buttons_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_7"
        app:layout_constraintEnd_toStartOf="@id/button_backspace"
        app:layout_constraintStart_toEndOf="@id/button_extended_func"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_backspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/calc_background"
        android:textColor="@color/black"
        android:text="@string/backspace"
        android:textSize="@dimen/buttons_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_8"
        app:layout_constraintEnd_toStartOf="@id/button_square_root"
        app:layout_constraintStart_toEndOf="@id/button_clear"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_square_root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/calc_background"
        android:textColor="@color/black"
        android:text="@string/square_root"
        android:textSize="@dimen/buttons_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_9"
        app:layout_constraintEnd_toStartOf="@id/button_divide"
        app:layout_constraintStart_toEndOf="@id/button_backspace"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/calc_background"
        android:textColor="@color/black"
        android:text="@string/divide"
        android:textSize="@dimen/buttons_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_multiple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_square_root"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/calc_background"
        android:textColor="@color/black"
        android:text="@string/button_6"
        android:textSize="@dimen/buttons_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_2"
        app:layout_constraintEnd_toStartOf="@id/button_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_extended_func"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/calc_background"
        android:textColor="@color/black"
        android:text="@string/button_7"
        android:textSize="@dimen/buttons_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_3"
        app:layout_constraintEnd_toStartOf="@id/button_8"
        app:layout_constraintStart_toEndOf="@id/button_6"
        app:layout_constraintTop_toBottomOf="@id/button_clear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/calc_background"
        android:textColor="@color/black"
        android:text="@string/button_8"
        android:textSize="@dimen/buttons_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_4"
        app:layout_constraintEnd_toStartOf="@id/button_9"
        app:layout_constraintStart_toEndOf="@id/button_7"
        app:layout_constraintTop_toBottomOf="@id/button_backspace" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/calc_background"
        android:textColor="@color/black"
        android:text="@string/button_9"
        android:textSize="@dimen/buttons_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_5"
        app:layout_constraintEnd_toStartOf="@id/button_multiple"
        app:layout_constraintStart_toEndOf="@id/button_8"
        app:layout_constraintTop_toBottomOf="@id/button_square_root" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multiple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/calc_background"
        android:textColor="@color/black"
        android:text="@string/button_multiple"
        android:textSize="@dimen/buttons_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_9"
        app:layout_constraintTop_toBottomOf="@id/button_divide" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/calc_background"
        android:textColor="@color/black"
        android:text="@string/button_2"
        android:textSize="@dimen/buttons_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_1"
        app:layout_constraintEnd_toStartOf="@id/button_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_6"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/calc_background"
        android:textColor="@color/black"
        android:text="@string/button_3"
        android:textSize="@dimen/buttons_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintEnd_toStartOf="@id/button_4"
        app:layout_constraintStart_toEndOf="@id/button_2"
        app:layout_constraintTop_toBottomOf="@id/button_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/calc_background"
        android:textColor="@color/black"
        android:text="@string/button_4"
        android:textSize="@dimen/buttons_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_point"
        app:layout_constraintEnd_toStartOf="@id/button_5"
        app:layout_constraintStart_toEndOf="@id/button_3"
        app:layout_constraintTop_toBottomOf="@id/button_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/calc_background"
        android:textColor="@color/black"
        android:text="@string/button_5"
        android:textSize="@dimen/buttons_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_equal"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintTop_toBottomOf="@id/button_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/calc_background"
        android:textColor="@color/black"
        android:text="@string/button_minus"
        android:textSize="@dimen/buttons_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_5"
        app:layout_constraintTop_toBottomOf="@id/button_multiple" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/calc_background"
        android:textColor="@color/black"
        android:text="@string/button_1"
        android:textSize="@dimen/buttons_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_2"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/calc_background"
        android:textColor="@color/black"
        android:text="@string/button_0"
        android:textSize="@dimen/buttons_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_point"
        app:layout_constraintStart_toEndOf="@id/button_1"
        app:layout_constraintTop_toBottomOf="@id/button_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/calc_background"
        android:textColor="@color/black"
        android:text="@string/button_point"
        android:textSize="@dimen/buttons_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_equal"
        app:layout_constraintStart_toEndOf="@id/button_0"
        app:layout_constraintTop_toBottomOf="@id/button_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/calc_background"
        android:textColor="@color/black"
        android:text="@string/button_equal"
        android:textSize="@dimen/buttons_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/button_plus"
        app:layout_constraintStart_toEndOf="@id/button_point"
        app:layout_constraintTop_toBottomOf="@id/button_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/calc_background"
        android:textColor="@color/black"
        android:text="@string/button_plus"
        android:textSize="@dimen/buttons_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_equal"
        app:layout_constraintTop_toBottomOf="@id/button_minus" />
</androidx.constraintlayout.widget.ConstraintLayout>